--- a/src/lwc/statusManager/statusManager.html
+++ b/src/lwc/statusManager/statusManager.html
@@ -3,38 +3,27 @@
  -->
 
 <!-- Status Manager -->
+<!-- apexContactsForAccount.html -->
 <template>
-    <lightning-card title="Manage Availability Statuses">
-        <template if:true={records}>
-            <lightning-datatable
-                    key-field="DeveloperName"
-                    data={records}
-                    columns={columns}
-                    onsave={handleSave}
-                    draft-values={draftValues}
-                    hide-checkbox-column>
-            </lightning-datatable>
+    <lightning-card title="Manage Statuses Label" icon-name="custom:custom63">
+        <div class="slds-m-around_medium">
+            <!-- Show table if data exists -->
+            <template if:true={records}>
+                <lightning-datatable
+                        key-field="Id"
+                        data={records}
+                        columns={columns}
+                        onsave={handleSave}
+                        draft-values={draftValues}
+                >
+                </lightning-datatable>
+            </template>
 
-            <div class="slds-p-top_medium slds-align_absolute-center">
-                <lightning-button
-                        label="Save Changes"
-                        onclick={saveDrafts}
-                        variant="brand"
-                        disabled={saveDisabled}>
-                </lightning-button>
-            </div>
-        </template>
-
-        <template if:true={errors}>
-            <div class="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_error" role="alert">
-                <span class="slds-assistive-text">Error</span>
-                <p>{errors}</p>
-            </div>
-        </template>
-
-
-        <template if:true={isLoading}>
-            <lightning-spinner alternative-text="Loading statuses..."></lightning-spinner>
-        </template>
+            <!-- Show error if present -->
+<!--            <template if:true={error}>-->
+<!--                <c-error-panel errors={error}></c-error-panel>-->
+<!--            </template>-->
+        </div>
     </lightning-card>
 </template>
+
